Redesign container architecture: shell-free, multi-base-image matrix
4 base images: eclipse-temurin:17 (ARMv7), eclipse-temurin:25
     (RISC-V), Ubuntu Chiseled 21, Google Distroless 25

Signed-off-by: Stefan Bischof <stbischof@bipolis.org>